bug-fixing horizontal scroll on the responsive

--- a/main.css
+++ b/main.css
@@ -28,6 +28,11 @@ nav.top-menu ul li {
   display: inline;
 }
 
+main {
+  padding: 0;
+  margin: 13px;
+}
+
 img.logo-img {
   width: 100%;
   height: 100%;
@@ -59,11 +64,6 @@ nav.middle-menu ul li a {
   line-height: 1;
   padding: 18px 0 0 10px;
   vertical-align: baseline;
-}
-
-main {
-  padding: 0;
-  margin: 13px;
 }
 
 section.gear article ul li a,
@@ -925,6 +925,11 @@ footer .social-icon div:hover {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+  }
+
+  main {
+    padding: 0;
+    margin: 0;
   }
 
   img.responsive-img-logo {
